tests/errors/_questions/generated_errors/wrong_addr/&_to_function.c
int function ()
{
	return 1;
}
int main()
{
	//int arr[2] = {1.1,2};
	int a = 1;
	int i;
	i = &function();
	return 0;
}